--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -5,21 +5,21 @@
   <title>Jasmine Spec Runner v2.2.0</title>
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.2.0/jasmine_favicon.png">
-  <link rel="stylesheet" href="/lib/jasmine-2.2.0/jasmine.css">
+  <link rel="stylesheet" href="lib/jasmine-2.2.0/jasmine.css">
 
-  <script src="/lib/jasmine-2.2.0/jasmine.js"></script>
-  <script src="/lib/jasmine-2.2.0/jasmine-html.js"></script>
-  <script src="/lib/jasmine-2.2.0/boot.js"></script>
+  <script src="lib/jasmine-2.2.0/jasmine.js"></script>
+  <script src="lib/jasmine-2.2.0/jasmine-html.js"></script>
+  <script src="lib/jasmine-2.2.0/boot.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="/lib/jasmine-2.2.0/jasmine-jquery.js"></script>
+  <script src="lib/jasmine-2.2.0/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
-  <script src="/src/Emotion.js"></script>
-  <script src="/src/Interface.js"></script>
+  <script src="src/Emotion.js"></script>
+  <script src="src/Interface.js"></script>
 
   <!-- include spec files here... -->
-  <script src="/spec/EmotionSpec.js"></script>
-  <script src="/spec/interfaceSpec.js"></script>
+  <script src="spec/EmotionSpec.js"></script>
+  <script src="spec/interfaceSpec.js"></script>
 
 </head>
 
